--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
                                 <!-- Left Column -->
                                 <div class="sixcol left-column">
                                     <div>
-                                        <span class="slider_text1">Unlock the Full Power of Odoo – Train Your Team with
-                                            Certified Experts</span>
-                                        <span class="slider_text2">We make Odoo training simple, effective, and tailored
-                                            to your team’s real needs</span>
+                                        <span class="slider_text1">Unlock the Full Potential of Odoo – Train Your Team
+                                            with Certified Industry Experts</span>
+                                        <span class="slider_text2"> Comprehensive, hands-on Odoo training tailored to
+                                            your business needs.
+                                            Gain practical skills, live mentorship, and certification guidance to
+                                            accelerate your success.</span>
                                         <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Get Course
                                             Outline</a>
                                         <a href="#pricing" class="slider_text4">Let's Get Started</a>
@@ -117,8 +119,9 @@
                                 <div class="sixcol right-column">
                                     <section id="contact">
                                         <div class="contact-box">
-                                            <h2>Lets Discuss about Odoo</h2>
-                                            <p class="contact-lead">Help us to help you</p>
+                                            <h2>Let’s Talk About Your Odoo Training Needs</h2>
+                                            <p class="contact-lead">Fill out the form below and our experts will get
+                                                back to you with a personalized plan.</p>
                                             <!-- <p>Write to me directly or call me – I look forward to exciting ideas!</p> -->
                                             <form class="contact-form" method="POST" action="#contact" id="contactForm">
                                                 <div class="form-item">
@@ -176,44 +179,44 @@
 
                             <p>
                                 <i class="fa fa-quote-left fa-3x pull-left grey"></i>
-                                <b>Odoo is more than just software</b> — it's a global
-                                business management ecosystem that’s transforming how
-                                organizations operate. Whether you're an individual building a
-                                career or a business investing in your team, here’s why Odoo
-                                is the smart choice:
+                                <strong>Odoo isn’t just software — it’s a revolutionary business management
+                                    platform</strong>
+                                that empowers companies worldwide to streamline operations, increase efficiency, and
+                                scale faster. Whether you're an aspiring professional or a business leader, here’s why
+                                mastering Odoo is a game changer:
+                            </p>
                             </p>
 
                             <!--begin quotes -->
                             <p>
-                                <!-- <i class="fa fa-quote-left fa-3x pull-left grey"></i> -->
-                                <span>
-                                    <b>Adopted in Over 120 Countries</b> From startups to
-                                    Fortune 500s, companies across 120+ countries trust Odoo to
-                                    run their operations. Its modular design and cloud-based
-                                    flexibility make it a go-to solution for businesses
-                                    worldwide.</span>
+                                <strong>Trusted by 120+ Countries & Growing</strong><br />
+                                From agile startups to Fortune 500 companies, over 7 million businesses globally rely on
+                                Odoo’s modular and cloud-based ERP to drive their success. Learning Odoo equips you with
+                                skills relevant across diverse industries and markets.
                             </p>
                             <!--end quotes -->
                             <p>
-                                <b>7 Million+ Businesses Run on Odoo,</b> Odoo powers a wide
-                                range of business processes — ERP, CRM, Accounting, HR,
-                                Inventory, and more — all from a single platform. Learning
-                                Odoo means becoming proficient in one of the most versatile
-                                and scalable business tools in the market.
+                                <strong>All-in-One Platform for Business Success</strong><br />
+                                Odoo seamlessly integrates CRM, Sales, Inventory, Accounting, HR, Manufacturing, and
+                                more — empowering businesses with an all-in-one system. Becoming proficient in Odoo
+                                means mastering one of the most versatile, scalable, and in-demand ERP platforms
+                                worldwide.
                             </p>
+
+
                             <p>
-                                <b>High-Paying Career Opportunities</b> As Odoo adoption
-                                continues to grow, so does the demand for skilled
-                                professionals. Certified Odoo consultants, developers, and
-                                functional experts are highly sought-after across industries —
-                                offering lucrative career paths both in India and globally.
+                                <strong>Unlock High-Paying Career & Consulting Opportunities</strong><br />
+                                As Odoo adoption skyrockets, the demand for certified consultants, developers, and
+                                functional experts is booming. Skilled Odoo professionals enjoy rewarding careers,
+                                remote work flexibility, and global job prospects — especially in fast-growing markets
+                                like India.
                             </p>
                         </div>
                         <!--end sixcol -->
 
                         <!--begin sixcol -->
                         <div class="sixcol last right_fade">
-                            <img src="lib/images/3.png" alt="picture" />
+                            <img src="lib/images/3.png" alt="Odoo Business Management Platform" />
                         </div>
                         <!--end sixcol -->
                     </div>
@@ -235,7 +238,7 @@
                     <div class="twelvecol">
                         <!--begin sixcol -->
                         <div class="sixcol left_fade">
-                            <img src="lib/images/1.png" alt="picture" />
+                            <img src="lib/images/1.png" alt="Odoo Training Session" />
                         </div>
                         <!--end sixcol -->
 
@@ -250,7 +253,8 @@
                             <!--end features_title_wrapper -->
 
                             <p>
-                                We provide comprehensive Odoo training designed to empower your entire organization:
+                                Our comprehensive Odoo training programs are designed to empower every member of your
+                                organization with practical skills and strategic insights:
                             </p>
 
                             <!--begin showcase_item -->
@@ -258,10 +262,11 @@
                                 <span class="dropcaps_showcase"><i class="fa fa-umbrella"></i></span>
 
                                 <div class="text_align_left">
-                                    <h4 class="small_margins">Real-World Use Cases:</h4>
+                                    <h4 class="small_margins">Hands-On, Real-World Scenarios</h4>
                                     <p>
-                                        Training tailored to your specific business needs, focusing on practical,
-                                        real-time scenarios to maximize relevance and impact.
+                                        Customized training aligned with your unique business challenges, using
+                                        real-time case studies and practical exercises to ensure immediate applicability
+                                        and ROI.
                                     </p>
                                 </div>
                             </div>
@@ -272,10 +277,11 @@
                                 <span class="dropcaps_showcase"><i class="fa fa-camera-retro"></i></span>
 
                                 <div class="text_align_left">
-                                    <h4 class="small_margins">Department-Specific Functional Training:</h4>
+                                    <h4 class="small_margins">Role-Based Functional Expertise</h4>
                                     <p>
-                                        Customized sessions for key departments such as Accounts, Sales, Purchase, and
-                                        Inventory, ensuring every team member gains the expertise they need.
+                                        CTailored sessions for critical departments including Accounting, Sales,
+                                        Purchasing, and Inventory Management — equipping your teams with precise skills
+                                        to excel in their roles.
                                     </p>
                                 </div>
                             </div>
@@ -285,10 +291,11 @@
                                 <span class="dropcaps_showcase"><i class="fa fa-gears"></i></span>
 
                                 <div class="text_align_left">
-                                    <h4 class="small_margins">Technical Training for Developers:</h4>
+                                    <h4 class="small_margins">Advanced Developer Workshops</h4>
                                     <p>
-                                        Optional in-depth technical workshops for your in-house developers to master
-                                        customization, integration, and advanced Odoo functionalities.
+                                        In-depth technical training for your developers focused on mastering Odoo
+                                        customization, integrations, and advanced module development to maximize your
+                                        platform’s capabilities.
                                     </p>
                                 </div>
                             </div>
@@ -298,11 +305,11 @@
                                 <span class="dropcaps_showcase"><i class="fa fa-bar-chart-o"></i></span>
 
                                 <div class="text_align_left">
-                                    <h4 class="small_margins">Mindset Transformation:</h4>
+                                    <h4 class="small_margins">Empowering Critical Thinking & Process Optimization</h4>
                                     <p>
-                                        Beyond teaching processes, we train users to think critically and solve problems
-                                        independently—shifting from simply following steps to truly understanding and
-                                        optimizing workflows.
+                                        Beyond basic training, we nurture a problem-solving mindset that enables your
+                                        team to analyze workflows, innovate solutions, and drive continuous improvement
+                                        across your business.
                                     </p>
                                 </div>
                             </div>
@@ -936,35 +943,14 @@
     </div>
     <!--! end of #container -->
 
-    
-<!-- Back to Top button with progress SVG -->
-<button id="backToTop" aria-label="Back to top">
-  <svg id="progressCircle" width="60" height="60" viewBox="0 0 60 60" aria-hidden="true">
-    <!-- Background circle (light gray) -->
-    <circle
-      cx="30"
-      cy="30"
-      r="28"
-      stroke="#ddd"
-      stroke-width="4"
-      fill="none"
-    />
-    <!-- Progress circle -->
-    <circle
-      id="progressBar"
-      cx="30"
-      cy="30"
-      r="28"
-      stroke="#007BFF"
-      stroke-width="4"
-      fill="none"
-      stroke-linecap="round"
-      stroke-dasharray="175.93"
-      stroke-dashoffset="175.93"
-    />
-  </svg>
-  ↑
-</button>
+    <button id="backToTop" aria-label="Back to top">
+        ↑
+        <svg id="progressCircle" width="60" height="60" viewBox="0 0 60 60">
+            <circle cx="30" cy="30" r="28" stroke="gray" stroke-width="4" fill="none" opacity="0.3" />
+            <circle id="progressBar" cx="30" cy="30" r="28" stroke="#fff" stroke-width="4" fill="none"
+                stroke-linecap="round" stroke-dasharray="176" stroke-dashoffset="176" />
+        </svg>
+    </button>
 
     <!-- scripts concatenated and minified via ant build script-->
     <script src="lib/js/modernizr-2.6.1.min.js"></script>
@@ -1184,7 +1170,6 @@
             window.scrollTo({ top: 0, behavior: 'smooth' });
         });
     </script>
-
     <!--end shrink header script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
