changes font link

--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
     <link rel="stylesheet" href="lib/css/style.css" />
     <link rel="stylesheet" href="lib/css/animate.css" />
     <link rel="stylesheet" href="lib/css/font-awesome.css" />
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,600,300,700"
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,600,300,700"
         rel="stylesheet" type="text/css" />
-    <link href="http://fonts.googleapis.com/css?family=Oswald:400,700,300" rel="stylesheet" type="text/css" />
-    <link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700,300" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <!-- end CSS-->
 
     <script src="lib/js/jquery-1.10.2.min.js"></script>
