--- a/index.html
+++ b/index.html
@@ -706,10 +706,11 @@
                                 <div class="testimonial swiper mySwiper">
                                     <div class="testi-content swiper-wrapper">
 
-                                        <!-- Testimonial Slide -->
+                                        <!-- Testimonial Slide 1 -->
                                         <div class="slide swiper-slide">
                                             <img src="https://i.ibb.co/3m5x6B5/people6.jpg"
                                                 alt="Testimonial by Marnie Lotter" class="image" />
+                                            <div class="stars" style="color: #fbbf24;">★★★★★</div>
                                             <p>
                                                 The hands-on format of Zinfog's training helped us deploy
                                                 Odoo faster and avoid common mistakes. The trainer was
@@ -722,9 +723,11 @@
                                             </div>
                                         </div>
 
+                                        <!-- Testimonial Slide 2 -->
                                         <div class="slide swiper-slide">
                                             <img src="https://i.ibb.co/hFVbbty/people3.jpg"
                                                 alt="Testimonial by Rajiv Menon" class="image" />
+                                            <div class="stars" style="color: #fbbf24;">★★★★★</div>
                                             <p>
                                                 We subscribed to the newsletter and found excellent tips we
                                                 could implement instantly. It’s not just marketing fluff —
@@ -737,9 +740,11 @@
                                             </div>
                                         </div>
 
+                                        <!-- Testimonial Slide 3 -->
                                         <div class="slide swiper-slide">
                                             <img src="https://i.ibb.co/Lh9gfFZ/people2.jpg"
                                                 alt="Testimonial by Aisha Thomas" class="image" />
+                                            <div class="stars" style="color: #fbbf24;">★★★★★</div>
                                             <p>
                                                 The expert emails and resources helped me prepare for our
                                                 Odoo rollout. I always look forward to the new updates.
@@ -758,12 +763,33 @@
                                 </div>
                                 <!-- end swiper testimonial slider -->
 
-                                <!-- begin email signup form -->
-                                <!-- <form class="newsletter_form" action="#" method="POST">
-                                    <input type="email" name="email" placeholder="Enter your email address" required />
-                                    <button type="submit" class="newsletter_button">Subscribe Now</button>
-                                </form> -->
-                                <!-- end email signup form -->
+                                <!-- Client Logos Section -->
+                                <div class="client-logos" style="text-align:center; margin: 40px 0;">
+                                    <h3 style="margin-bottom: 20px; color: #f9f9f9;">Trusted by Teams Worldwide</h3>
+                                    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+                                        <img src="https://dummyimage.com/120x60/cccccc/000&text=BrightCorp"
+                                            alt="BrightCorp" />
+                                        <img src="https://dummyimage.com/120x60/cccccc/000&text=Hexasoft"
+                                            alt="Hexasoft" />
+                                        <img src="https://dummyimage.com/120x60/cccccc/000&text=RetailPlus"
+                                            alt="RetailPlus" />
+                                        <img src="https://dummyimage.com/120x60/cccccc/000&text=OptimaSys"
+                                            alt="OptimaSys" />
+                                        <img src="https://dummyimage.com/120x60/cccccc/000&text=Zenware"
+                                            alt="Zenware" />
+                                    </div>
+                                </div>
+
+                                <!-- Case Study Highlight -->
+                                <div class="case-study-highlight"
+                                    style="background: #f9f9f9; border-radius: 10px; padding: 30px; margin-top: 40px; text-align: center;">
+                                    <h3>Case Study: RetailPlus ERP Transformation</h3>
+                                    <p>We helped RetailPlus migrate to Odoo in just 3 weeks, cutting manual processes by
+                                        60%. Want similar results?</p>
+                                    <a href="#contact" class="btn"
+                                        style="background-color: #333; color: #fff; padding: 12px 24px; border-radius: 6px; display: inline-block; margin-top: 10px;">Let’s
+                                        Talk</a>
+                                </div>
 
                             </section>
                         </div>
@@ -772,6 +798,7 @@
                 </div>
             </div>
             <!-- end newsletter_box -->
+
         </div>
         <!-- end newsletter_wrapper -->
 
