footer contact form

--- a/index.html
+++ b/index.html
@@ -950,8 +950,8 @@
                     <div class="sixcol last right_fade">
                         <section id="contact">
                             <div class="contact-box">
-                                <h2>Lets Discuss about Odoo</h2>
-                                <p class="contact-lead">Help us to help you</p>
+                                <h2>Let’s Talk About Your Odoo Training Needs</h2>
+                                <p class="contact-lead">Fill out the form below and our experts will get back to you with a personalized plan.</p>
                                 <!-- <p>Write to me directly or call me – I look forward to exciting ideas!</p> -->
                                 <form class="contact-form" method="POST" action="#contact" id="contactForm">
                                     <div class="form-item">
