--- a/index.html
+++ b/index.html
@@ -5,12 +5,33 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
-    <title>Zinfog Service</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <title>Zinfog Services | Expert Odoo Training & Consulting</title>
+
     <!-- Favicon -->
-    <link rel="shortcut icon" href="lib/images/logo.svg" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <link rel="shortcut icon" href="lib/images/logo.svg" type="image/svg+xml" />
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Zinfog Services provides expert Odoo training, implementation, and consulting to streamline your business operations." />
+    <meta name="author" content="Zinfog Services" />
+    <meta name="keywords"
+        content="Odoo training, Odoo consulting, ERP solutions, business automation, Zinfog Services" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Zinfog Services | Expert Odoo Training & Consulting" />
+    <meta property="og:description"
+        content="Streamline your business with top-notch Odoo training and consulting from Zinfog Services." />
+    <meta property="og:image" content="https://www.zinfog.com/lib/images/social-preview.png" />
+    <meta property="og:url" content="https://www.zinfog.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Zinfog Services | Expert Odoo Training & Consulting" />
+    <meta name="twitter:description"
+        content="Streamline your business with top-notch Odoo training and consulting from Zinfog Services." />
+    <meta name="twitter:image" content="https://www.zinfog.com/lib/images/social-preview.png" />
+
 
     <!-- 1140px Grid styles for IE -->
     <!--[if lte IE 9
@@ -20,7 +41,7 @@
         type="text/css"
         media="screen"
     /><![endif]-->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- CSS concatenated and minified via ant build script-->
     <link rel="stylesheet" href="lib/css/style.css" />
     <link rel="stylesheet" href="lib/css/animate.css" />
@@ -951,7 +972,8 @@
                         <section id="contact">
                             <div class="contact-box">
                                 <h2>Let’s Talk About Your Odoo Training Needs</h2>
-                                <p class="contact-lead">Fill out the form below and our experts will get back to you with a personalized plan.</p>
+                                <p class="contact-lead">Fill out the form below and our experts will get back to you
+                                    with a personalized plan.</p>
                                 <!-- <p>Write to me directly or call me – I look forward to exciting ideas!</p> -->
                                 <form class="contact-form" method="POST" action="#contact" id="contactForm">
                                     <div class="form-item">
