changes our team

--- a/index.html
+++ b/index.html
@@ -367,13 +367,9 @@
             <section class="expert-section" id="talk-to-expert">
                 <div class="expert-content">
                     <div class="expert-text">
-                        <h1>Talk to Our Experts</h1>
+                        <h1>Our Odoo Experts</h1>
                         <p>
-                            Unlock the full potential of <strong>Odoo ERP</strong> with a free consultation from our
-                            certified experts.
-                            Whether you're just starting your digital transformation or looking to enhance your
-                            existing system,
-                            our specialists at <strong>Zinfog Services</strong> are here to help.
+                           Unlock the full potential of Odoo for your team with expert-led, role-based training designed for real-world business needs. At Zinfog Services, our certified trainers simplify complex workflows, accelerate user adoption, and eliminate confusion—so your staff gains confidence and productivity fast. Whether you're just starting with Odoo Online or struggling with past training results, we’re here to help you get it right.
                         </p>
                     </div>
                 </div>
@@ -546,7 +542,7 @@
                 </section>
             </div>
             <div class="expert-content">
-                <a href="#contact" class="slider_text4">Book Your Free Consultation</a>
+                <a href="#contact" class="slider_text4">Talk to a Training Expert →</a>
                 <p class="cta-note"><em>Limited slots available each week – secure yours now!</em></p>
             </div>
         </div>
