--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                                             </div>
 
                                             <div class="box-dpname dp-name-4 hide-dp-bottom">
-                                                <img class="" src="lib/images/AbdulBasith.png" alt="">
+                                                <img class="" src="lib/images/rishana.jpeg" alt="">
                                                 <h1>MADGE JENNINGS</h1>
                                             </div>
 
@@ -445,7 +445,7 @@
                                             </div>
 
                                             <div class="box-dpname dp-name-7 look">
-                                                <img class="" src="lib/images/anas.png" alt="">
+                                                <img class="" src="lib/images/AbdulBasith.png" alt="">
                                                 <h1>MADGE JENNINGS</h1>
                                             </div>
 
@@ -522,7 +522,7 @@
                                 <div class="col-md-3 col-sm-3">
                                     <div class="container-pe-quote right">
                                         <div class="pp-quote li-quote-4">
-                                            <img src="lib/images/AbdulBasith.png" alt="">
+                                            <img src="lib/images/rishana.jpeg" alt="">
                                         </div>
                                         <div class="pp-quote li-quote-5">
                                             <img src="lib/images/VivekMadhavan.png" alt="">
@@ -531,7 +531,7 @@
                                             <img src="lib/images/Jasnamol.png" alt="">
                                         </div>
                                         <div class="pp-quote li-quote-7 active">
-                                            <img src="lib/images/anas.png" alt="">
+                                            <img src="lib/images/AbdulBasith.png" alt="">
                                         </div>
                                     </div>
 
