changes image odoo experts

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
                                     <div class="container-pe-quote left">
                                         <div class="pp-quote li-quote-1">
-                                            <img src="http://nanaetben.fr/animation/assets/images/website/Ben-1.png"
+                                            <img src="lib/images/rasika.jpeg"
                                                 alt="">
                                         </div>
                                         <div class="pp-quote li-quote-2">
@@ -410,9 +410,9 @@
 
                                             <div class="box-dpname dp-name-1 hide-dp-top">
                                                 <img class=""
-                                                    src="http://nanaetben.fr/animation/assets/images/website/Ben-1.png"
+                                                    src="lib/images/rasika.jpeg"
                                                     alt="">
-                                                <h1>MADGE JENNINGS</h1>
+                                                <h1>Razika Razak</h1>
                                             </div>
 
                                             <div class="box-dpname dp-name-2 hide-dp-top">
@@ -431,22 +431,22 @@
 
                                             <div class="box-dpname dp-name-4 hide-dp-bottom">
                                                 <img class="" src="lib/images/rishana.jpeg" alt="">
-                                                <h1>MADGE JENNINGS</h1>
+                                                <h1>Rishana</h1>
                                             </div>
 
                                             <div class="box-dpname dp-name-5 hide-dp-top">
                                                 <img class="" src="lib/images/VivekMadhavan.png" alt="">
-                                                <h1>MADGE JENNINGS</h1>
+                                                <h1>Vivek Madhavan</h1>
                                             </div>
 
                                             <div class="box-dpname dp-name-6 hide-dp-top">
                                                 <img class="" src="lib/images/Jasnamol.png" alt="">
-                                                <h1>MADGE JENNINGS</h1>
+                                                <h1>Jasnamol</h1>
                                             </div>
 
                                             <div class="box-dpname dp-name-7 look">
                                                 <img class="" src="lib/images/AbdulBasith.png" alt="">
-                                                <h1>MADGE JENNINGS</h1>
+                                                <h1>Abdul Basith</h1>
                                             </div>
 
                                         </div>
