--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
                                             your business needs.
                                             Gain practical skills, live mentorship, and certification guidance to
                                             accelerate your success.</span>
-                                        <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Get Course
-                                            Outline</a>
+                                        <a href="#pricing" class="slider_text3"><i class="fa fa-headphones"></i>&nbsp; Book a Free Demo</a>
                                         <a href="#pricing" class="slider_text4">Let's Get Started</a>
                                     </div>
                                 </div>
@@ -352,18 +351,7 @@
         <!--end nine_section2_wrapper -->
 
         <!-- begin testimonials_wrapper -->
-        <div class="testimonials_wrapper">
-            <!-- <div class="testimonials_box bounce_fade">
-                <span class="testimonials_autor">- Zinfog’s Training Approach -</span>
-                <span class="testimonials_img"><i class="fa fa-quote-right fa-3x white"></i></span><br />
-                <span class="testimonials_text">Zinfog’s training is the opposite of one-size-fits-all. We tailor every
-                    session to real business use cases, making the learning highly relevant and practical. Our
-                    interactive sessions actively engage participants, ensuring they understand and apply the concepts
-                    effectively. After training, we conduct usage audits to track progress and address any challenges.
-                    Plus, our content is customized by department and role, so every team member gets exactly what they
-                    need to succeed. Typical training often misses these key elements — but at Zinfog, this approach
-                    sets us apart.</span>
-            </div> -->
+        <!-- <div class="testimonials_wrapper">
             <section class="expert-section" id="talk-to-expert">
                 <div class="expert-content">
                     <div class="expert-text">
@@ -403,8 +391,6 @@
                                 </div>
                                 <div class="col-md-6 col-sm-6">
                                     <div class="sec-eight-text-area">
-                                        <!-- <img class="" src="assets/images/website/Nana-4.png" alt="">
-		    							<h1>MADGE JENNINGS</h1> -->
 
                                         <div class="container-dp-name">
 
@@ -450,11 +436,6 @@
                                             </div>
 
                                         </div>
-                                        <!-- <img class="" src="assets/images/website/quote.png" alt="">		    							
-		    							<p>Whether you enjoy city breaks or extended holidays in the sun, you
-											can always improve your travel experiences by staying in a small,
-											charming hotel, where the atmosphere is welcoming and friendly and
-										</p> -->
                                         <div class="container-quote">
 
                                             <div class="quote quote-text-1 hide-top">
@@ -545,7 +526,7 @@
                 <a href="#contact" class="slider_text4">Talk to a Training Expert →</a>
                 <p class="cta-note"><em>Limited slots available each week – secure yours now!</em></p>
             </div>
-        </div>
+        </div> -->
         <!-- end testimonials_wrapper -->
 
 
